cmake_minimum_required(VERSION 3.2.0)

project(tbb_py VERSION 0.1)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

find_package(TBB REQUIRED)
find_package(PythonInterp REQUIRED)
find_package(PythonLibs REQUIRED)
find_package(Boost REQUIRED COMPONENTS python)
find_package(Pybind11 REQUIRED)

set(THREADS_PREFER_PTHREAD_FLAG YES)
find_package(Threads REQUIRED)
unset(THREADS_PREFER_PTHREAD_FLAG)

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/run.py" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

add_library(bp_parfor MODULE bp_parfor.cpp)
set_target_properties(bp_parfor PROPERTIES PREFIX "")
target_include_directories(bp_parfor PRIVATE "${PYTHON_INCLUDE_DIRS}")
target_link_libraries(bp_parfor ${Boost_PYTHON_LIBRARY} Threads::Threads)
set_property(TARGET bp_parfor PROPERTY CXX_STANDARD 14)
set_property(TARGET bp_parfor PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET bp_parfor PROPERTY CXX_EXTENSIONS NO)

add_library(bp_tg MODULE bp_tg.cpp)
set_target_properties(bp_tg PROPERTIES PREFIX "")
target_include_directories(bp_tg PRIVATE "${PYTHON_INCLUDE_DIRS}")
target_link_libraries(bp_tg ${Boost_PYTHON_LIBRARY} ${TBB_LIBRARIES} Threads::Threads)
set_property(TARGET bp_tg PROPERTY CXX_STANDARD 14)
set_property(TARGET bp_tg PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET bp_tg PROPERTY CXX_EXTENSIONS NO)

add_library(bp_tbb_parfor MODULE bp_tbb_parfor.cpp)
set_target_properties(bp_tbb_parfor PROPERTIES PREFIX "")
target_include_directories(bp_tbb_parfor PRIVATE "${PYTHON_INCLUDE_DIRS}")
target_link_libraries(bp_tbb_parfor ${Boost_PYTHON_LIBRARY} ${TBB_LIBRARIES} Threads::Threads)
set_property(TARGET bp_tbb_parfor PROPERTY CXX_STANDARD 14)
set_property(TARGET bp_tbb_parfor PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET bp_tbb_parfor PROPERTY CXX_EXTENSIONS NO)

add_library(pb_parfor MODULE pb_parfor.cpp)
set_target_properties(pb_parfor PROPERTIES PREFIX "")
target_include_directories(pb_parfor PRIVATE "${PYTHON_INCLUDE_DIRS}" "${PYBIND11_INCLUDE_DIR}")
target_link_libraries(pb_parfor Threads::Threads)
set_property(TARGET pb_parfor PROPERTY CXX_STANDARD 14)
set_property(TARGET pb_parfor PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET pb_parfor PROPERTY CXX_EXTENSIONS NO)

add_library(pb_tg MODULE pb_tg.cpp)
set_target_properties(pb_tg PROPERTIES PREFIX "")
target_include_directories(pb_tg PRIVATE "${PYTHON_INCLUDE_DIRS}" "${PYBIND11_INCLUDE_DIR}")
target_link_libraries(pb_tg ${TBB_LIBRARIES} Threads::Threads)
set_property(TARGET pb_tg PROPERTY CXX_STANDARD 14)
set_property(TARGET pb_tg PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET pb_tg PROPERTY CXX_EXTENSIONS NO)

add_library(pb_tbb_parfor MODULE pb_tbb_parfor.cpp)
set_target_properties(pb_tbb_parfor PROPERTIES PREFIX "")
target_include_directories(pb_tbb_parfor PRIVATE "${PYTHON_INCLUDE_DIRS}" "${PYBIND11_INCLUDE_DIR}")
target_link_libraries(pb_tbb_parfor ${TBB_LIBRARIES} Threads::Threads)
set_property(TARGET pb_tbb_parfor PROPERTY CXX_STANDARD 14)
set_property(TARGET pb_tbb_parfor PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET pb_tbb_parfor PROPERTY CXX_EXTENSIONS NO)
